examples/test/testpolicy11811.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11811
  namespace: namespace387
spec:
  podSelector:
    matchLabels:
      key4: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value37
          key31: value18
          key11: value20
      podSelector:
        matchLabels:
          key10: value32
